--- a/3/customers/front-end/src/app/customer/component/customer.component.html
+++ b/3/customers/front-end/src/app/customer/component/customer.component.html
@@ -1,2 +1,26 @@
-<button mat-raised-button color="primary" [routerLink]="['/register']">Novo</button>
-<p>working</p>
+<mat-card>
+
+    <mat-card-header>
+        <button mat-raised-button color="primary" [routerLink]="['/register']">Novo</button>
+    </mat-card-header>
+    
+    <div>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Nome </th>
+                <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="birthdate">
+                <th mat-header-cell *matHeaderCellDef>Data de Nascimento </th>
+                <td mat-cell *matCellDef="let element"> {{element.BirthDate | date:"dd/MM/yyyy"}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+        </table>
+    </div>
+
+</mat-card>
