--- a/3/customers/front-end/src/app/customer/component/register/register.component.html
+++ b/3/customers/front-end/src/app/customer/component/register/register.component.html
@@ -5,17 +5,21 @@
         <div class="form-horizontal">
 
             <div class="alert alert-danger" *ngIf="error.length > 0">
-                <h3 id="msgRetorno">Opa! Alguma coisa não deu certo:</h3>
+                <h3 id="msgRetorno">Alguma coisa não deu certo</h3>
                 {{ error }}
             </div>
 
-            <div class="form-group">
-                <label class="col-md-2 control-label">Nome</label>
-                <div class="col-md-10">
-                    <input class="form-control" id="name" type="text" placeholder="Nome do cliente (requerido)" formControlName="name" />
-                </div>
-            </div>
-            
+            <mat-form-field appearance="fill">
+                <mat-label>Nome</mat-label>
+                <input matInput formControlName="name">
+            </mat-form-field>
+
+            <mat-form-field>
+                <input matInput [matDatepicker]="picker" placeholder="Data de nascimento" formControlName="birthdate">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker ></mat-datepicker>
+            </mat-form-field>
+
             <div class="form-group">
                 <div class="col-md-4 col-md-offset-2">
                     <span><button class="btn btn-success" id="Registrar" type="submit">Registrar</button></span>
