--- a/3/customers/front-end/src/app/customer/component/customer.component.html
+++ b/3/customers/front-end/src/app/customer/component/customer.component.html
@@ -17,6 +17,24 @@
                 <td mat-cell *matCellDef="let element"> {{element.BirthDate | date:"dd/MM/yyyy"}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="redirectUpdate">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let row" class="action-link"> 
+                    <button (click)="redirectUpdate(row.Id)" mat-button >   
+                        <mat-icon>edit</mat-icon>                     
+                    </button>
+                </td>
+            </ng-container> 
+
+            <ng-container matColumnDef="delete">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let row" class="action-link"> 
+                    <button (click)="delete(row.Id)" mat-button >   
+                        <mat-icon>delete</mat-icon>                     
+                    </button>
+                </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     
